<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>buff_tracker</name>
  <version>0.0.1</version>
  <description>NCUT DreamTeam RoboMaster ROS2 Package: Buff Tracker</description>
  <maintainer email="zhou@todo.todo">zhou</maintainer>
  <license>GPLv3</license>
  

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>foxglove_msgs</depend>
  <depend>rm_interface</depend>
  <depend>ifr_interface</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>  
  <depend>rm_referee_interface</depend>
  <depend>ifr_common</depend>  

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <resource>meshes/buff.dae</resource>
  </export>
</package>